Many changes meant for mobile support.

--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -1,5 +1,5 @@
 <LogDialog>:
-    size_hint: 0.7, 0.4
+    size_hint: 0.9, 0.55
     auto_dismiss: False
 
     MDCard:
@@ -107,9 +107,9 @@
             MDLabel:
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
-                font_style: 'Subtitle2'
+                font_style: 'Caption'
                 halign: "center"
-                text: "Only one hacker is among the following."
+                text: "Exactly one hacker is among the following."
 
         MDRectangleFlatButton:
             id: okbutton
