--- a/gui/informationscreens/RoundsScreen.kv
+++ b/gui/informationscreens/RoundsScreen.kv
@@ -85,7 +85,7 @@
                         Color:
                             rgba: 51/255, 255/255, 51/255, 0.3
                         Line:
-                            width: 0.3
+                            width: dp(0.3)
                             rectangle: self.x, self.y, self.width, self.height
                         Color:
                             rgba: 51/255, 255/255, 51/255, 0.06
