--- a/codenet.kv
+++ b/codenet.kv
@@ -149,9 +149,9 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder-lock']}[/font] Main Log"
+                            text: f" [font=Icons]{md_icons['folder-lock']}[/font] Main Log "
                             theme_text_color: "Custom"
-                            font_style: 'H5'
+                            font_style: 'H6'
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             markup: True
@@ -201,7 +201,7 @@ WindowManager:
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
                                 markup: True
                                 text: "At least one hacker is among the following."
@@ -224,9 +224,9 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder']}[/font] First Log"
+                            text: f" [font=Icons]{md_icons['folder']}[/font] First Log "
                             theme_text_color: "Custom"
-                            font_style: 'H5'
+                            font_style: 'H6'
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             markup: True
@@ -278,7 +278,7 @@ WindowManager:
                                 id: round2sum1
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
                                 markup: True
                                 text: "At least one hacker may be among the following."
@@ -289,9 +289,9 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder']}[/font] Second Log"
+                            text: f" [font=Icons]{md_icons['folder']}[/font] Second Log "
                             theme_text_color: "Custom"
-                            font_style: 'H5'
+                            font_style: 'H6'
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             markup: True
@@ -343,7 +343,7 @@ WindowManager:
                                 id: round2sum2
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
                                 markup: True
                                 text: "At least one hacker may be among the following."
@@ -354,9 +354,9 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder']}[/font] Third Log"
+                            text: f" [font=Icons]{md_icons['folder']}[/font] Third Log "
                             theme_text_color: "Custom"
-                            font_style: 'H5'
+                            font_style: 'H6'
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             markup: True
@@ -408,7 +408,7 @@ WindowManager:
                                 id: round2sum3
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
                                 markup: True
                                 text: "At least one hacker may be among the following."
@@ -432,9 +432,9 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder-eye']}[/font] Player Log"
+                            text: f" [font=Icons]{md_icons['folder-eye']}[/font] Player Log "
                             theme_text_color: "Custom"
-                            font_style: 'H5'
+                            font_style: 'H6'
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             markup: True
@@ -474,18 +474,18 @@ WindowManager:
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
-                                text: "Only one hacker is among the following."
+                                text: "Exactly one hacker is among the following."
 
                         MDLabel:
                             id:playerlog2
                             adaptive_height: True
                             size_hint_x: None
-                            font_style: 'H5'
+                            font_style: 'H6'
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[font=Icons]{md_icons['folder-eye']}[/font] Player Log"
+                            text: f" [font=Icons]{md_icons['folder-eye']}[/font] Player Log "
                             theme_text_color: "Custom"
                             markup: True
                             text_color: C('#FFFFFF')
@@ -526,9 +526,9 @@ WindowManager:
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
-                                font_style: 'Subtitle2'
+                                font_style: 'Caption'
                                 halign: "center"
-                                text: "Only one hacker is among the following."
+                                text: "Exactly one hacker is among the following."
 
                         Widget:
                             size_hint: 1, 0.5
