--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -19,7 +19,7 @@
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: "H4"
-                text: "Game Summary"
+                text: "Match Summary"
                 halign: "center"
 
             MDSeparator:
@@ -39,7 +39,7 @@
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.3
                     Line:
-                        width: 0.3
+                        width: dp(0.3)
                         rectangle: self.x, self.y, self.width, self.height
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.06
@@ -88,7 +88,7 @@
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.3
                     Line:
-                        width: 0.3
+                        width: dp(0.3)
                         rectangle: self.x, self.y, self.width, self.height
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.06
@@ -113,7 +113,7 @@
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.3
                     Line:
-                        width: 0.3
+                        width: dp(0.3)
                         rectangle: self.x, self.y, self.width, self.height
                     Color:
                         rgba: 51/255, 255/255, 51/255, 0.06
