--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -12,10 +12,9 @@
         radius: ["15dp"]
 
         MDLabel:
-            text: "Identity"
-            font_style: "H4"
-            size_hint_y: None
-            height: self.texture_size[1]
+            id: idtitle
+            font_style: "H5"
+            adaptive_height: True
             halign: "center"
             theme_text_color: "Custom"
             text_color: C("FFFFFF")
@@ -40,17 +39,9 @@
                     size: self.size
 
             MDLabel:
-                id: whatcolor
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
-
-            MDLabel:
                 id: arehacker
                 text_color: C("FFFFFF")
-                font_style: "Subtitle1"
+                font_style: "Subtitle2"
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
@@ -58,7 +49,7 @@
             MDLabel:
                 id: haveallies
                 text_color: C("FFFFFF")
-                font_style: "Subtitle1"
+                font_style: "Subtitle2"
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
@@ -67,14 +58,14 @@
                 id: whattarget
                 text: "[u]Target[/u]: "
                 text_color: C("FFFFFF")
-                font_style: "Subtitle1"
+                font_style: "Subtitle2"
                 theme_text_color: "Custom"
                 adaptive_height: True
                 markup: True
 
             MDLabel:
                 id: identitydes
-                font_style: "Subtitle1"
+                font_style: "Subtitle2"
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
                 adaptive_height: True
