--- a/gui/informationscreens/PointsScreen.kv
+++ b/gui/informationscreens/PointsScreen.kv
@@ -51,7 +51,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color={app.globals.colordefs['Red']}][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all hackers, if the majority determined the hacker's target, as a hacker."
+                    text: f"[color=#FFFFFF]+[/color][color={app.globals.colordefs['Red']}][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all hackers, if the majority of coders determined the hacker's target, as a hacker."
                     markup: True
 
                 MDLabel:
@@ -85,7 +85,7 @@
                     text_color: app.theme_cls.primary_color
                     theme_text_color: "Custom"
                     font_style: 'Body2'
-                    text: f"[color=#FFFFFF]+[/color][color={app.globals.colordefs['Blue']}][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if the majority determined the hacker's target, as a coder."
+                    text: f"[color=#FFFFFF]+[/color][color={app.globals.colordefs['Blue']}][size=22sp][font=Icons]{md_icons['numeric-2-box']}[/font][/size][/color] [color=#FFFFFF]points[/color] for all coders, if the majority of coders determined the hacker's target, as a coder."
                     markup: True
 
                 MDLabel:
