--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -27,7 +27,7 @@
                 color: C("FFFFFF")
 
             MDLabel:
-                text: f"Follow the [color=#FFFFFF]tracker[/color] below and press the [color=#FFFFFF][font=Icons]{md_icons['card-account-details']}[/font][/color] button at the [color=#FFFFFF]bottom[/color] when it's [color=#FFFFFF]your[/color] turn to reveal your [color=#FFFFFF]identity[/color]."
+                text: f"Follow the [color=#FFFFFF]tracker[/color] below and press the [color=#FFFFFF][font=Icons]{md_icons['card-account-details']}[/font][/color] at the [color=#FFFFFF]bottom[/color] when it's [color=#FFFFFF]your[/color] turn to reveal your [color=#FFFFFF]identity[/color]."
                 adaptive_height: True
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
