--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -12,10 +12,9 @@
         radius: ["15dp"]
 
         MDLabel:
-            text: "Player Log"
-            font_style: "H4"
-            size_hint_y: None
-            height: self.texture_size[1]
+            id: whatplayer
+            font_style: "H5"
+            adaptive_height: True
             halign: "center"
             theme_text_color: "Custom"
             text_color: C("FFFFFF")
@@ -26,90 +25,60 @@
         MDStackLayout:
             padding: "8dp"
             spacing: "12dp"
-            canvas.before:
-                Color:
-                    rgba: 0/255, 0/255, 0/255, 0.8
-                Line:
-                    width: dp(0.3)
-                    rectangle: self.x, self.y, self.width, self.height
-                Color:
-                    rgba: 0/255, 0/255, 0/255, 0.5
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
-
-            MDLabel:
-                id: whatplayer
-                text: "[u]Player[/u]: "
-                text_color: C("FFFFFF")
-                font_style: "Subtitle1"
-                theme_text_color: "Custom"
-                adaptive_height: True
-                markup: True
 
             MDLabel:
                 markup: True
-                font_style: "Subtitle1"
+                font_style: "Subtitle2"
                 adaptive_height: True
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
                 text: "[u]Confidential[/u]: You may not reveal your log until the end of the phase."
 
-        MDLabel:
-            text: "Result"
-            font_style: "H4"
-            size_hint_y: None
-            height: self.texture_size[1]
-            halign: "center"
-            theme_text_color: "Custom"
-            text_color: C("FFFFFF")
-
-        MDSeparator:
-            color: C("FFFFFF")
-
-        Widget:
-            size_hint: 1, 0.01
-
-        MDBoxLayout:
-            orientation: "vertical"
-            canvas.before:
-                Color:
-                    rgba: 0/255, 0/255, 0/255, 0.8
-                Line:
-                    width: dp(0.3)
-                    rectangle: self.x, self.y, self.width, self.height
-                Color:
-                    rgba: 0/255, 0/255, 0/255, 0.5
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
-
-            MDLabel:
-                id: log1sub
-                markup: True
-                text_color: app.theme_cls.primary_color
-                theme_text_color: "Custom"
-                font_style: 'Subtitle2'
-                halign: "center"
-                text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
-
-            MDLabel:
+            MDBoxLayout:
+                orientation: "vertical"
+                spacing: '8dp'
+                padding: '8dp'
                 adaptive_height: True
-                id: log1subtext
-                halign: 'center'
-                text: " "
-                text_color: C("FFFFFF")
-                adaptive_height: True
-                theme_text_color: "Custom"
-                font_style: 'Subtitle2'
-                markup: True
+                canvas.before:
+                    Color:
+                        rgba: 0/255, 0/255, 0/255, 0.8
+                    Line:
+                        width: dp(0.3)
+                        rectangle: self.x, self.y, self.width, self.height
+                    Color:
+                        rgba: 0/255, 0/255, 0/255, 0.5
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
 
-            MDLabel:
-                text_color: C("FFFFFF")
-                theme_text_color: "Custom"
-                font_style: 'Caption'
-                halign: "center"
-                text: "Exactly one hacker is among the following."
+                MDLabel:
+                    id: log1sub
+                    markup: True
+                    adaptive_height: True
+                    text_color: app.theme_cls.primary_color
+                    theme_text_color: "Custom"
+                    font_style: 'Subtitle2'
+                    halign: "center"
+                    text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+
+                MDLabel:
+                    adaptive_height: True
+                    id: log1subtext
+                    halign: 'center'
+                    text: " "
+                    text_color: C("FFFFFF")
+                    adaptive_height: True
+                    theme_text_color: "Custom"
+                    font_style: 'Subtitle2'
+                    markup: True
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C("FFFFFF")
+                    theme_text_color: "Custom"
+                    font_style: 'Caption'
+                    halign: "center"
+                    text: "Exactly one hacker is among the following."
 
         MDRectangleFlatButton:
             id: okbutton
