Side objectives added.

--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -55,6 +55,17 @@
                 markup: True
 
             MDLabel:
+                id: identitydes
+                font_style: "Subtitle2"
+                theme_text_color: "Custom"
+                text_color: C("FFFFFF")
+                adaptive_height: True
+                markup: True
+
+            MDSeparator:
+                color: C("FFFFFF")
+
+            MDLabel:
                 id: whattarget
                 text: "[u]Target[/u]: "
                 text_color: C("FFFFFF")
@@ -64,7 +75,7 @@
                 markup: True
 
             MDLabel:
-                id: identitydes
+                id: side_objective
                 font_style: "Subtitle2"
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
