Mobile ready attempt 2.

--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -117,9 +117,9 @@
                     size: self.size
 
             RecycleBoxLayout:
-                padding: dp(200), dp(8)
+                padding: dp(8)
                 default_size: None, dp(50)
-                default_size_hint: 1, None
+                default_size_hint: 0.7, None
                 size_hint_y: None
                 height: self.minimum_height
                 orientation: 'vertical'
