--- a/codenet.kv
+++ b/codenet.kv
@@ -116,6 +116,7 @@ WindowManager:
 
         MDBoxLayout:
             orientation: "vertical"
+            padding: "0dp", "0dp", "0dp", "55dp"
 
             MDTabs:
                 indicator_color: C('FFFFFF')
@@ -140,7 +141,7 @@ WindowManager:
                             adaptive_height: True
                             orientation: "vertical"
                             padding: "8dp"
-                            spacing: "8dp"
+                            spacing: "12dp"
 
                             MDLabel:
                                 adaptive_height: True
@@ -165,7 +166,7 @@ WindowManager:
                                 adaptive_height: True
                                 pos_hint: {"center_x":0.5, "y": 0}
                                 orientation: "vertical"
-                                spacing: '8dp'
+                                spacing: '12dp'
                                 padding: '8dp'
                                 canvas.before:
                                     Color:
@@ -222,7 +223,7 @@ WindowManager:
                             adaptive_height: True
                             orientation: "vertical"
                             padding: "8dp"
-                            spacing: "8dp"
+                            spacing: "12dp"
 
                             MDLabel:
                                 id: logtitle1
@@ -249,7 +250,7 @@ WindowManager:
                                 pos_hint: {"center_x":0.5, "y": 0}
                                 adaptive_height: True
                                 orientation: "vertical"
-                                spacing: '8dp'
+                                spacing: '12dp'
                                 padding: '8dp'
                                 canvas.before:
                                     Color:
@@ -319,7 +320,7 @@ WindowManager:
                                 pos_hint: {"center_x":0.5, "y": 0}
                                 orientation: "vertical"
                                 padding: "8dp"
-                                spacing: "8dp"
+                                spacing: "12dp"
                                 canvas.before:
                                     Color:
                                         rgba: 51/255, 255/255, 51/255, 0.3
@@ -388,7 +389,7 @@ WindowManager:
                                 orientation: "vertical"
                                 adaptive_height: True
                                 padding: "8dp"
-                                spacing: "8dp"
+                                spacing: "12dp"
                                 canvas.before:
                                     Color:
                                         rgba: 51/255, 255/255, 51/255, 0.3
@@ -444,7 +445,7 @@ WindowManager:
                             adaptive_height: True
                             orientation: "vertical"
                             padding: "8dp"
-                            spacing: "8dp"
+                            spacing: "12dp"
 
                             MDLabel:
                                 id:playerlog1
@@ -471,7 +472,7 @@ WindowManager:
                                 adaptive_height: True
                                 pos_hint: {"center_x":0.5, "y": 0}
                                 orientation: "vertical"
-                                spacing: '8dp'
+                                spacing: '12dp'
                                 padding: '8dp'
                                 canvas.before:
                                     Color:
@@ -494,6 +495,14 @@ WindowManager:
                                     halign: "center"
                                     markup: True
                                     text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+
+                                MDLabel:
+                                    adaptive_height: True
+                                    text_color: app.theme_cls.primary_color
+                                    theme_text_color: "Custom"
+                                    font_style: 'Caption'
+                                    halign: "center"
+                                    text: " "
 
                                 MDLabel:
                                     adaptive_height: True
@@ -528,7 +537,7 @@ WindowManager:
                                 adaptive_height: True
                                 pos_hint: {"center_x":0.5, "y": 0}
                                 orientation: "vertical"
-                                spacing: '8dp'
+                                spacing: '12dp'
                                 padding: '8dp'
                                 canvas.before:
                                     Color:
@@ -551,6 +560,14 @@ WindowManager:
                                     halign: "center"
                                     markup: True
                                     text: f"[size=22sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+
+                                MDLabel:
+                                    adaptive_height: True
+                                    text_color: app.theme_cls.primary_color
+                                    theme_text_color: "Custom"
+                                    font_style: 'Caption'
+                                    halign: "center"
+                                    text: " "
 
                                 MDLabel:
                                     adaptive_height: True
