--- a/gui/mainscreens/PlayerLog.kv
+++ b/gui/mainscreens/PlayerLog.kv
@@ -4,7 +4,7 @@
     MDBoxLayout:
         orientation: "vertical"
         spacing: "12dp"
-        padding: "8dp"
+        padding: "12dp", "8dp"
 
         MDFloatingLabel:
             adaptive_height: True
