Fixed deprecated MDToolbar usage.

--- a/codenet.kv
+++ b/codenet.kv
@@ -37,7 +37,7 @@ WindowManager:
     MDBoxLayout:
         orientation: "vertical"
 
-        MDToolbar:
+        MDTopAppBar:
             title: "C0de.Net"
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
@@ -578,7 +578,7 @@ WindowManager:
                                     text: "Exactly one hacker is among the following."
 
         MDBottomAppBar:
-            MDToolbar:
+            MDTopAppBar:
                 id: roundregulator
                 icon: "play"
                 type: "bottom"
