--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -6,7 +6,7 @@
     MDBoxLayout:
         orientation: "vertical"
 
-        MDToolbar:
+        MDTopAppBar:
             title: "C0de.Net"
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
@@ -118,7 +118,7 @@
             size_hint: 1, 0.6
 
         MDBottomAppBar:
-            MDToolbar:
+            MDTopAppBar:
                 id: bottomplayertoolbar
                 icon: "square-rounded-outline"
                 type: "bottom"
