--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -6,7 +6,7 @@
     MDBoxLayout:
         orientation: "vertical"
 
-        MDToolbar:
+        MDTopAppBar:
             title: "C0de.Net"
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
@@ -129,7 +129,7 @@
         Widget:
 
         MDBottomAppBar:
-            MDToolbar:
+            MDTopAppBar:
                 id: revtool
                 icon: "card-account-details"
                 type: "bottom"
