--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -6,7 +6,7 @@
     MDBoxLayout:
         orientation: "vertical"
 
-        MDToolbar:
+        MDTopAppBar:
             title: "C0de.Net"
             right_action_items: [["information-outline", lambda x: root.openinfo()]]
 
@@ -47,7 +47,7 @@
                 adaptive_height: True
 
         MDBottomAppBar:
-            MDToolbar:
+            MDTopAppBar:
                 icon: "square-rounded-outline"
                 type: "bottom"
                 on_action_button: app.on_pause()
